@@ -29,47 +29,43 @@
 		<antcall target="jarForPublicIncremental" />
 	</target>
 
-	<target name="jarForPublicIncremental" depends="initialize" description="Make (incrementally) binary Jar file for public use">
+	<target name="jarForPublic" depends="initialize" description="Make (incrementally) binary Jar file for public use">
 		<property name="jarname" value="electricPublic-${version}.jar" />
 		<echo message="Building ${jarname} incrementally" />
-		<mkdir dir="${antBuild}"/>
+		<antcall target="ensureBuildDirectory" />
 		<antcall target="compilePublic" />
-		<antcall target="incrementalJARs" />
 		<antcall target="createJARFile" />
 	</target>
 
 	<target name="jarForGNUBinary" depends="initialize" description="Make binary Jar file for GNU">
 		<property name="jarname" value="electricBinary-${version}.jar" />
 		<echo message="Building ${jarname}" />
-		<antcall target="createBuildDirectory" />
+		<mkdir dir="${antBuild}"/>
 		<antcall target="compilePublic" />
-		<antcall target="copyPublicJARs" />
 		<antcall target="copyGNUParts" />
 		<antcall target="createJARFile">
-			<param name="GNU" value="1"/>
+		  <param name="GNU" value="1"/>
 		</antcall>
-		<antcall target="deleteBuildDirectory" />
 	</target>
 
 	<target name="jarForGNUSource" depends="initialize" description="Make source Jar file for GNU">
 		<property name="jarname" value="electric-${version}.jar" />
 		<echo message="Building ${jarname}" />
-		<antcall target="createBuildDirectory" />
+		<mkdir dir="${antBuild}"/>
 		<antcall target="compilePublic" />
-		<antcall target="copyPublicJARs" />
 		<antcall target="copyGNUParts" />
 		<antcall target="copyPublicSources" />
 		<antcall target="createJARFile">
-			<param name="GNU" value="1"/>
+		  <param name="GNU" value="1"/>
 		</antcall>
-		<antcall target="deleteBuildDirectory" />
 	</target>
 
 	<target name="jarForSFSExtras" depends="initialize" description="Make SFS Extra Jar file for IRSIM, j3d, and JMF">
 		<property name="jarname" value="electricSFS-${version}.jar" />
 		<echo message="Building ${jarname}" />
-		<antcall target="createBuildDirectory" />
+		<mkdir dir="${antBuild}"/>
 		<antcall target="compilePublic" />
+		<antcall target="copyGNUParts" />
 		<antcall target="copyPublicSources" />
 		<copy file="${packaging}/LicenseIRSIM.txt" tofile="${antBuild}/LicenseIRSIM.txt" />
 		<zip basedir="${antBuild}" compress="true" zipfile="${packaging}/${jarname}">
@@ -77,7 +73,6 @@
 			<include name="com/sun/electric/plugins/irsim/**" />
 			<include name="com/sun/electric/plugins/JMF/**" />
 		</zip>
-		<antcall target="deleteBuildDirectory" />
 	</target>
 
 	<target name="jarForOracle" depends="initialize" description="Make binary Jar file for Oracle internal use">
@@ -117,13 +112,18 @@
 
 	<target name="javadoc" depends="initialize" description="Create Javadoc">
 		<mkdir dir="apidoc" />
-		<javadoc destdir="apidoc" private="false" use="true" source="1.8" maxmemory="400m">
+		<javadoc destdir="apidoc" private="false" use="true" encoding="utf-8" source="1.8" maxmemory="400m" additionalparam="-Xdoclint:none">
 			<packageset dir="electric-java">
 				<include name="com/sun/electric/**" />
 				<exclude name="com/sun/electric/plugins/**" />
 			</packageset>
 			<classpath>
 				<pathelement location="${beanshell}" />
+				<pathelement location="${slf4j-api}" />
+				<pathelement location="${scala-compiler}" />
+				<pathelement location="${scala-library}" />
+				<pathelement location="${scala-actors}" />
+				<pathelement location="${scala-reflect}" />
 				<pathelement location="${AppleJava}" />
 			</classpath>
 			<sourcepath>
@@ -143,11 +143,17 @@
 
 		<!-- the location of various JAR files -->
 		<property name="beanshell"          value="${packaging}/bsh-2.0b4.jar" />
-		<property name="jython"             value="${packaging}/jython.jar" />
-		<property name="AppleJava"          value="${packaging}/AppleJavaExtensions-1.4.jar" />
-		<property name="slf4j-api"          value="${packaging}/slf4j-api-1.7.7.jar" />
-		<property name="slf4j-jdk"          value="${packaging}/slf4j-jdk14-1.7.7.jar" />
-		<property name="junit"              value="${packaging}/junit-4.10.jar" />
+		<property name="jython"             value="${packaging}/jython-standalone-2.7.0.jar" />
+		<property name="abcl"               value="${packaging}/abcl.jar" />
+		<property name="abcl-contrib"       value="${packaging}/abcl-contrib.jar" />
+		<property name="AppleJava"          value="${packaging}/AppleJavaExtensions.jar" />
+		<property name="slf4j-api"          value="${packaging}/slf4j-api-1.7.12.jar" />
+		<property name="slf4j-jdk"          value="${packaging}/slf4j-jdk14-1.7.12.jar" />
+		<property name="junit"              value="${packaging}/junit-4.12.jar" />
+		<property name="jogl-all"           value="${packaging}/jogl-all.jar" />
+		<property name="gluegen-rt"         value="${packaging}/gluegen-rt.jar" />
+		<property name="jogl-all-natives"   value="${packaging}/jogl-all-natives-macosx-universal.jar" />
+		<property name="gluegen-rt-natives" value="${packaging}/gluegen-rt-natives-macosx-universal.jar" />
 		<property name="vecmath"            value="${packaging}/vecmath.jar" />
 		<property name="j3dcore"            value="${packaging}/j3dcore.jar" />
 		<property name="j3dutils"           value="${packaging}/j3dutils.jar" />
@@ -155,6 +161,7 @@
 		<property name="scala-compiler"     value="${packaging}/scala-compiler-2.11.7.jar" />
 		<property name="scala-reflect"      value="${packaging}/scala-reflect-2.11.7.jar" />
 		<property name="scala-library"      value="${packaging}/scala-library-2.11.7.jar" />
+		<property name="scala-actors"      value="${packaging}/scala-actors-2.11.0.jar" />
 
 		<!-- does the build directory already exist? -->
 		<condition property="buildDirExists">
@@ -175,23 +182,33 @@
 		</loadfile>
 	</target>
 
-	<target name="compilePublic" description="Compile the public part of Electric">
+	<target name="compilePublic" depends="initialize" description="Compile the public part of Electric">
 		<!-- deprecation flag: deprecation="true" -->
-		<javac debug="true" includeantruntime="false" destdir="${antBuild}" srcdir="${ElectricJavaLoc}" fork="true" memoryMaximumSize="1024m"
-		       encoding="UTF-8" source="1.8" target="1.8">
-			<classpath>
-				<pathelement location="${slf4j-api}" />
-				<pathelement location="${slf4j-jdk}" />
-                                <pathelement location="${scala-library}" />
-				<pathelement location="${beanshell}" />
-				<pathelement location="${jython}" />
-				<pathelement location="${AppleJava}" />
-				<pathelement location="${junit}" />
-				<pathelement location="${j3dcore}" />
-				<pathelement location="${j3dutils}" />
-				<pathelement location="${vecmath}" />
-				<pathelement location="${jmf}" />
-			</classpath>
+		<javac deprecation="true" debug="true" 
+		       encoding="utf-8" includeantruntime="false"
+		       destdir="${antBuild}" srcdir="${ElectricJavaLoc}"
+		       fork="true" memoryMaximumSize="1024m"
+		       source="1.8" target="1.8">
+		  <compilerarg value="-Xlint:unchecked"/>
+		  <compilerarg value="-Xdiags:verbose"/>
+		  <compilerarg value="-g"/>
+		  <classpath>
+		    <pathelement location="${slf4j-api}" />
+		    <pathelement location="${slf4j-jdk}" />
+                    <pathelement location="${scala-library}" />
+                    <pathelement location="${scala-actors}" />
+                    <pathelement location="${scala-reflect}" />
+		    <pathelement location="${beanshell}" />
+		    <pathelement location="${jython}" />
+		    <pathelement location="${AppleJava}" />
+		    <pathelement location="${junit}" />
+		    <pathelement location="${jmf}" />
+		    <pathelement location="${j3dcore}" />
+		    <pathelement location="${j3dutils}" />
+		    <pathelement location="${vecmath}" />
+		  </classpath>
+		  <exclude name="com/sun/electric/plugins/irsim/" if="GNU" />
+		  <exclude name="com/sun/electric/plugins/JMF/" if="GNU" />
 		</javac>
 		<copy todir="${antBuild}/com">
 			<fileset dir="${ElectricJavaLoc}/com"
@@ -223,6 +240,8 @@
 				<pathelement location="${slf4j-jdk}" />
 				<pathelement location="${beanshell}" />
 				<pathelement location="${jython}" />
+				<pathelement location="${abcl}" />
+				<pathelement location="${abcl-contrib}" />
 				<pathelement location="${AppleJava}" />
 				<pathelement location="${junit}" />
 				<pathelement location="${j3dcore}" />
@@ -236,22 +255,23 @@
 		</copy>
 	</target>
 
-	<target name="copyPublicJARs" description="Copy Jar files for logging and Scala">
-		<unjar src="${slf4j-api}" dest="${antBuild}">
-			<patternset> <include name="org/"/> </patternset>
-		</unjar>
-		<unjar src="${slf4j-jdk}" dest="${antBuild}">
-			<patternset> <include name="org/"/> </patternset>
-		</unjar>
-		<unjar src="${scala-library}" dest="${antBuild}">
-			<patternset> <include name="scala/"/> </patternset>
-		</unjar>
+	<target name="copyPublicJARs" depends="initialize" description="Copy Jar files for logging and Scala">
+		<unjar src="${scala-library}" dest="${antBuild}"/>
+		<unjar src="${scala-actors}" dest="${antBuild}"/>
+		<unjar src="${scala-reflect}" dest="${antBuild}"/>
+		<unjar src="${junit}" dest="${antBuild}"/>
+		<unjar src="${jmf}" dest="${antBuild}"/>
+		<unjar src="${slf4j-api}" dest="${antBuild}"/>
+		<unjar src="${slf4j-jdk}" dest="${antBuild}"/>
+		<unjar src="${j3dcore}" dest="${antBuild}"/>
+		<unjar src="${j3dutils}" dest="${antBuild}"/>
+		<unjar src="${vecmath}" dest="${antBuild}"/>
 		<copy todir="${antBuild}/META-INF">
 			<fileset dir="${ElectricScalaLoc}/META-INF" />
 		</copy>
 	</target>
 
-	<target name="copyPrivateJARs" description="Copy Jar files for Apple stubs and Bean Shell">
+	<target name="copyPrivateJARs" depends="initialize" description="Copy Jar files for Apple stubs and Bean Shell">
 		<unjar dest="${antBuild}" src="${AppleJava}">
 			<patternset> <include name="com/"/> </patternset>
 		</unjar>
@@ -260,14 +280,26 @@
 		</unjar>
 	</target>
 
-	<target name="copyJythonJAR" description="Copy Jar file for Jythyon">
+	<target name="copyBshJAR" depends="initialize" description="Copy Jar files for Bean Shell">
+		<unjar dest="${antBuild}" src="${beanshell}">
+			<patternset> <include name="bsh/"/> </patternset>
+		</unjar>
+	</target>
+
+	<target name="copyJythonJAR" depends="initialize" description="Copy Jar file for Jythyon">
 		<unjar dest="${antBuild}" src="${jython}" />
+	</target>
+
+	<target name="copyABCLJAR" depends="initialize" description="Copy Jar file for ABCL">
+		<unjar dest="${antBuild}" src="${abcl}" />
+		<unjar dest="${antBuild}" src="${abcl-contrib}" />
 	</target>
 
 	<target name="incrementalJARs" unless="buildDirExists" description="Add JAR files only if incremental build is 'new'">
 		<antcall target="copyPublicJARs" />
 		<antcall target="copyPrivateJARs" />
 		<antcall target="copyJythonJAR" />
+		<antcall target="copyABCLJAR" />
 	</target>
 
 	<target name="copyGNUParts" description="Copy GNU license files">
@@ -294,7 +326,6 @@
 	</target>
 
 	<target name="createBuildDirectory" description="Create temporary build directory">
-		<delete dir="${antBuild}" />
 		<mkdir dir="${antBuild}"/>
 	</target>
 	
@@ -302,51 +333,84 @@
 		<delete dir="${antBuild}" />
 	</target>
 
-	<target name="mac-app" depends="jarForGNUSource" description="Build Macintosh Application">
-		<!--java jar="electric.jar" fork="true" outputproperty="version">
-			<arg value="-v" />
-			<jvmarg value="-Xmx1000m" />
-		</java-->
-		<property name="releasedir" value="Release${version}" />
-		<property name="appdir" value="${releasedir}/Electric.app" />
-		<mkdir dir="${releasedir}" />
-		<mkdir dir="${appdir}" />
-		<mkdir dir="${appdir}/Contents" />
-		<mkdir dir="${appdir}/Contents/MacOS" />
-		<mkdir dir="${appdir}/Contents/Resources" />
-		<mkdir dir="${appdir}/Contents/Resources/Java" />
-		<copy file="/System/Library/Frameworks/JavaVM.framework/Versions/Current/Resources/MacOS/JavaApplicationStub" todir="${appdir}/Contents/MacOS" />
-		<chmod file="${appdir}/Contents/MacOS/JavaApplicationStub" perm="755" />
-		<copy file="${packaging}/Info.plist" todir="${appdir}/Contents" />
-		<replace file="${appdir}/Contents/Info.plist" token="@VERSION" value="${version}" />
-		<copy file="${packaging}/PkgInfo" todir="${appdir}/Contents" />
-		<copy file="${packaging}/electric.icns" todir="${appdir}/Contents/Resources" />
-		<copy file="${packaging}/electric-${version}.jar" todir="${appdir}/Contents/Resources/Java" />
-		<!--exec executable="/Developer/Tools/SetFile">
-			<arg value="-a" />
-			<arg value="B" />
-			<arg value="${appdir}" />
-		</exec-->
-		<exec executable="/usr/bin/SetFile">
-			<arg value="-a" />
-			<arg value="B" />
-			<arg value="${appdir}" />
-		</exec>
-		<exec executable="${packaging}/mkdmg.sh">
-			<arg value="Electric${version}" />
-			<arg value="${releasedir}" />
-		</exec>
+	<target name="ensureBuildDirectory" unless="buildDirExists" description="Create temporary build directory">
+		<mkdir dir="${antBuild}"/>
+		<antcall target="copyPublicJARs" />
+		<antcall target="copyGNUParts" />
+		<antcall target="copyBshJAR" />
+		<antcall target="copyJythonJAR" />
+		<antcall target="copyABCLJAR" />
 	</target>
+	
 
 	<target name="clean" depends="initialize" description="Clean all build products">
 		<delete dir="${antBuild}" />
 		<delete quiet="false">
 			<fileset dir=".">
 				<include name="electric*.jar" />
-				<include name="Electric*.img" />
 			</fileset>
 		</delete>
-		<delete dir="Release${version}" />
 	</target>
 
+	<property environment="env"/>
+	<exec executable="/usr/libexec/java_home" 
+	      outputproperty="env.JAVA_HOME">
+	  <arg value="-v1.8"/>
+	</exec>
+	<taskdef name="bundleapp" 
+		 classname="com.oracle.appbundler.AppBundlerTask"
+		 classpath="packaging/appbundler-1.0.jar">
+	</taskdef>
+	<target name="mac-app" depends="initialize" description="Build Macintosh Application">
+	  <antcall target="jarForPublic" />
+	  <property name="electric" value="${packaging}/electricPublic-${version}.jar" />
+	  <property name="bundledir" value="${packaging}/Release${version}" />
+	  <mkdir dir="${bundledir}" />
+	  <bundleapp outputdirectory="${bundledir}"
+		     name="Electric"
+		     displayname="Electric VLSI"
+		     identifier="com.sun.Electric"
+		     shortversion="${version}"
+		     icon="${packaging}/electric.icns"
+		     applicationCategory="public.cae.electronics"
+		     mainclassname="com.sun.electric.Launcher">
+            <runtime dir="${env.JAVA_HOME}"/>
+	    <classpath dir=".">
+	      <include name="${electric}" />
+	      <include name="${AppleJava}" />
+	      <include name="${abcl-contrib}" />
+	      <include name="${abcl}" />
+	      <include name="${beanshell}" />
+	      <include name="${jmf}" />
+	      <include name="${junit}" />
+	      <include name="${jython}" />
+	      <include name="${scala-compiler}" />
+	      <include name="${scala-library}" />
+	      <include name="${slf4j-api}" />
+	      <include name="${slf4j-jdk}" />
+              <include name="${scala-compiler}" />
+              <include name="${scala-library}" />
+	      <include name="${j3dcore}" />
+	      <include name="${j3dutils}" />
+	      <include name="${vecmath}" />
+	      <include name="${jogl-all}" />
+	      <include name="${gluegen-rt}" />
+	      <include name="${jogl-all-natives}" />
+	      <include name="${gluegen-rt-natives}" />
+	    </classpath>
+	    <librarypath dir=".">
+	      <include name="${jogl-all}" />
+	      <include name="${gluegen-rt}" />
+	      <include name="${jogl-all-natives}" />
+	      <include name="${gluegen-rt-natives}" />
+	    </librarypath>
+	    <option value="-Xdebug"/>
+	    <option value="-Xverify:none"/>
+	    <option value="-Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=n"/>
+	    <option value="-Xms64m"/>
+	    <option value="-Xmx2048m"/>
+	    <option value="-Xss64m"/>
+	    <option value="-Dcom.apple.mrj.application.apple.menu.about.name=Electric"/>
+	  </bundleapp>
+	</target>
 </project>
